# okra

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  contracts.yml  security.yml
docs/: mcp.md  okra_contract.md
mcp/: __init__.py  manifest.json  server.py
src/okra/: api.py  bnpl.py  ce.py  events.py  policies.py
src/okra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/okra/mcp/: manifest.json  server.py
tests/: test_api.py  test_mcp_smoke.py  test_policies.py
tests/bnpl/: test_api_quote.py  test_ce_bnpl_quote.py  test_scoring.py
tests/fixtures/: approved_quote.json  declined_quote.json  review_required_quote.json
