[project]
name = "okra"
version = "0.1.0"
description = "OCN okra"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "coverage", "ruff", "black", "mypy", "httpx"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
